# hello-rs-k8s

./: Cargo.toml  README.md  hello.yaml  justfile
config/: default.yaml
src/: hello.rs  main.rs
